Adaptando Hero a imágenes de 2048 x 512

--- a/src/pages/comunidades/[communityId].astro
+++ b/src/pages/comunidades/[communityId].astro
@@ -58,7 +58,7 @@ const breadcrumbs = [
   </Fragment>
   {communityDetails ? (
     <>
-      <div class="hero" style={`background-image: url(${communityDetails.cover_image || '/placeholder-post.jpg'});`}>
+      <div class="hero" style={`background-image: url(https://images.hive.blog/u/${communityDetails.name}/cover);`}>
         <div class="container">
           <h1>{communityDetails.title}</h1>
           <p>{communityDetails.about}</p>
