--- a/src/pages/[category]/[...page].astro
+++ b/src/pages/[category]/[...page].astro
@@ -1,17 +1,16 @@
 ---
 import { getCollection } from 'astro:content';
-import Layout from '../../../layouts/Layout.astro';
-import PostCard from '../../../components/PostCard.astro';
-import { MAIN_CATEGORIES, POST_SETTINGS, SITE_INFO } from '../../../config/site';
-import SubcategorySidebar from '../../../components/SubcategorySidebar.astro';
-import Breadcrumbs from '../../../components/Breadcrumbs.astro';
+import Layout from '../../layouts/Layout.astro';
+import PostCard from '../../components/PostCard.astro';
+import { MAIN_CATEGORIES, POST_SETTINGS, SITE_INFO, SUBCATEGORIES } from '../../config/site'; // Ajustar ruta
+import SubcategorySidebar from '../../components/SubcategorySidebar.astro';
+import Breadcrumbs from '../../components/Breadcrumbs.astro';
 
 export const prerender = true;
 
 export interface Props {
   categoryTitle: string;
   page: any;
-  currentLocale: any;
 }
 
 export async function getStaticPaths({ paginate }) {
@@ -31,7 +30,7 @@ export async function getStaticPaths({ paginate }) {
     const pages = paginate(sortedPosts, {
       pageSize: POST_SETTINGS.postsPerPage,
       params: { category: params.category },
-      props: { categoryTitle: props.categoryTitle } // Pasamos categoryTitle como prop de paginación
+      props: { categoryTitle: props.categoryTitle }
     });
     paginatedPaths.push(...pages);
   }
@@ -47,12 +46,12 @@ const currentLang = langParam && SITE_INFO.locales[langParam] ? langParam : SITE
 const currentLocale = SITE_INFO.locales[currentLang];
 
 const breadcrumbs = [
-  { label: currentLocale.home, href: '/' },
-  { label: categoryTitle, href: `/temas/${categoryTitle.toLowerCase().replace(/ /g, '-')}/` }
+  { label: currentLocale.home, href: `${Astro.url.origin}/?lang=${currentLang}` },
+  { label: categoryTitle, href: `${Astro.url.origin}/${categoryTitle.toLowerCase().replace(/ /g, '-')}/?lang=${currentLang}` }
 ];
 ---
 
-<Layout title={`Posts de ${categoryTitle}`} currentLocale={currentLocale}>
+<Layout title={`Posts de ${categoryTitle}`} currentLocale={currentLocale} lang={currentLang}>
   <Fragment slot="breadcrumbs">
     <Breadcrumbs items={breadcrumbs} />
   </Fragment>
